Move stream_depth() from the TAP formatter to History so it's available to everyone.
This necessitated...
* Ensuring that accept_event/result is called with an event coordinator
  because things might want to get the history now
* Letting history see events before the formatter to update the stream_depth
  (and any future "state of the test" statistics)

There's no longer a need for the formatter to do anything special to an event, so
INNER_accept_event was no longer necessary.  The restriction that a result must be
inside a stream is not universal, so INNER_accept_result was no longer necessary.

Closes #118

--- a/Changes
+++ b/Changes
@@ -10,6 +10,12 @@ See README and version control log for Test::Builder2 changes.
     * Test::Builder2::Counter, History and Formatter are no longer singletons.
       This is unnecessary, use the objects provided by your EventCoordinator.
       [github 117]
+    * stream_depth() is now a method on the History object, not the TAP
+      formatter.  This makes it available to all event watchers. [github 118]
+    * history is now posted events before the formatter.  This lets the
+      formatter ask the history object about the test state.
+    * INNER_accept_event and INNER_accept_result are now gone from the
+      Formatter.  Write accept_event and accept_result normally.
 
     New Features
     * Added Test::Builder2::CanLoad to protect $! and $@ from tests loading
